Full project optimization: Gzip compression, @Transactional, DB indexes, JVM tuning, React.lazy code-splitting, Axios interceptors, debounced search, lazy images, React.memo